@@ -67,8 +67,8 @@ DIR = pic16
 endif
 CFLAGS += -Wl,-q
 CFLAGS += -Wl,--map
-CFLAGS += -I $(SDCC_SRC)/device/include/$(DIR)
-CFLAGS += -L $(SDCC_BIN)/device/lib/$(DIR)/bin
+CFLAGS += -I $(SDCC_SRC)/device/include/$(DIR) -I $(SDCC_SRC)/device/non-free/include/$(DIR)
+CFLAGS += -L $(SDCC_BIN)/device/lib/$(DIR)/bin -L $(SDCC_BIN)/device/non-free/lib/$(DIR)/bin
 #CFLAGS += --no-pcode-opt
 #CFLAGS += -V
 
